# spdi

./: .gitignore  Cargo.toml  LICENSE  README.md  max_change.txt
.github/workflows/: build.yml  github-actions.yml
src/: error.rs  grow.rs  lib.rs  main.rs  tests.rs  trim.rs  util.rs
