[package]
name = "spdi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spdi"
path = "src/main.rs"

[lib]
name = "spdi"
path = "src/lib.rs"

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
clap = {version="4.4.18", features=["derive"]}
lazy_static = "1.4.0"
noodles = {version="0.61.0", features=["vcf"]}
twobit = "0.2.1"
