[package]
name = "spdi"
version = "0.1.3"
authors = ["Ryangguk Kim <rkim@oakbioinformatics.com>"]
edition = "2021"
description = "SPDI is a format to describe a genomic variant. This crate provides a library to get an SPDI format representation of a variant and a command-line utility which adds SPDI format output to an input VCF file."
readme = "README.md"
repository = "https://github.com/rkimoakbioinformatics/spdi"
homepage = "https://github.com/rkimoakbioinformatics/spdi"
license-file = "LICENSE"
keywords = ["bioinformatics", "genomics", "spdi", "vcf"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "spdi"
path = "src/main.rs"

[lib]
name = "spdi"
path = "src/lib.rs"

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
clap = {version="4.4.18", features=["derive"]}
lazy_static = "1.4.0"
noodles = {version="0.61.0", features=["vcf"]}
twobit = "0.2.1"
oxygenv_base = {path="../oxygenv_base"}
